--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,6 +1,7 @@
 {% extends "blog/base.html" %}
 {% block body %}
 	
-	<h1>About</h1>
+	<h1>Blogger</h1><br>
+	<p>This is a blogging website</p>
 
 {% endblock body %}
