--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -9,16 +9,6 @@
 				<p class="text-secondary">{{ user.email }}</p>
 			</div>
 		</div>
-		<form method="POST" enctype="multipart/form-data">
-			{% csrf_token %}
-			<fieldset class="form-group">
-				<legend class="border-bottom mb-4">Edit Profile</legend>
-				{{ u_form|crispy }}
-				{{ p_form|crispy }}
-			</fieldset>
-			<div class="form-group">
-				<button class="btn btn-primary" type="submit">Update</button>
-			</div>
-		</form>
 	</div>
+	<a class="btn btn-warning" href="{% url 'profileupdate' %}">Edit Profile</a>
 {% endblock body %}
